--- a/src/app/shared/components/question-card/question-card.component.scss
+++ b/src/app/shared/components/question-card/question-card.component.scss
@@ -34,7 +34,7 @@
     
     .progress-fill {
       height: 100%;
-      background-color: #007bff;
+      background-color: #4a9ba8;
       transition: width 0.5s ease;
     }
   }
